# ft_cub3D

./: .gitignore  CMakeLists.txt  Makefile  calc_intersection.c  cub3D  cub3d  ogv1.c  ogv1.h  utils_calc.c  utils_draw.c
.github/workflows/: make&norm.yml
img/: collect.xpm  exit.xpm  player.xpm  tile.xpm  wall.xpm
includes/: calc.h  config.h  draw.h  main.h  ogv1.h  parse.h  utils.h
libft/: ft_memcmp.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strlcpy.c  ft_strmapi.c  ft_strncmp.c  libft.h
map/: ..cub  err10_less_sep.cub  err11_surrounded.cub  err12_surrounded_mid.cub  err13_p_no.cub  err14_p_dub.cub  err1_no_map.cub  err3_extention.cuv  err4_dub_elem.cub  err5_elem_in_map.cub  err6_false_mid.cub  err7_color.cub  err8_less.cub  err9_less_nl.cub  err_1.cub  err_10.cub  err_11.cub  err_12.cub  err_13.cub  err_14.cub  err_15.cub  err_16.cub  err_2.cub  err_3.cub  err_4.cub  err_5.cub  err_6.cub  err_6.cuv  err_7.cub  err_8.cub  err_9.cub  mini.cub  ok_basic.cub  ok_devide_map.cub  ok_mini.cub  ok_nl_down.cub  ok_nl_up.cub  ok_nl_up_down.cub  ok_squea.cub  subject.cub  (+7 more)
srcs/: calc_calc_horizontal_inter_pos.c  calc_calc_vertical_inter_pos.c  calc_compare_make_inter.c  calc_inter.c  calc_inter_horizon.c  calc_inter_utils.c  calc_intersection.c  calc_search_horizontal_inter.c  calc_search_vertical_inter.c  calc_utils.c  calc_utils2.c  draw_background.c  draw_rect.c  draw_utils.c  draw_wall.c  initialize_mlx.c  main.c  move.c  ogv1.c  parse.c  parse_add_color.c  parse_load.c  parse_load_map_list_to_data.c  parse_load_map_str_to_list.c  parse_load_textures.c  parse_load_utils.c  parse_load_utils2.c  parse_new.c  parse_utils.c  parse_utils_bool.c  parse_utils_bool2.c  parse_utils_free.c  parse_utils_libft.c  parse_utils_libft2.c  parse_utils_load.c  parse_utils_map_node.c  parse_utils_map_node2.c  parse_validate_map_data.c  utils_calc.c  utils_draw.c
srcs/calc/: calc_calc_horizontal_inter_pos.c  calc_calc_vertical_inter_pos.c  calc_intersection.c  calc_utils.c  calc_utils2.c
srcs/draw/: draw_background.c  draw_rect.c  draw_utils.c  draw_wall.c
srcs/mlx_wrapper/: ft_x_mlx_get_data_addr.c  ft_x_mlx_init.c  ft_x_mlx_new_image.c  ft_x_mlx_new_window.c  ft_x_mlx_xpm_file_to_image.c
srcs/parse/: parse.c  parse_add_color.c  parse_add_wall.c  parse_double_strdup_pad_space.c  parse_double_strdup_padd_space.c  parse_extract_val.c  parse_get_line_kind.c  parse_load_map_list_to_data.c  parse_load_map_str_to_list.c  parse_load_textures.c  parse_trim_map_list.c  parse_utils.c  parse_utils_bool.c  parse_utils_free.c  parse_utils_load.c  parse_utils_print.c  parse_validate_grid_pos.c  parse_validate_map_data.c  parse_validate_map_data_utils.c
test/: color.c  display_inter.c  get_grid_intersection.c  print_surround_err.c  test_double.c  test_exit.c  tozeki_old_intersection.c
test_kusano/: parse.sh
test_kusano/TEXTURE/: east61.xpm  north61.xpm  (+2 more)
tests/: CMakeLists.txt  parse_test.cc
(+50 files in other folders)
